chamber home page v4.1 - Fixed alignment issues on mobile view for the business cards

--- a/chamber/styles/chamber-large.css
+++ b/chamber/styles/chamber-large.css
@@ -114,7 +114,7 @@ p {
 
 .cta-btn:hover {
     background-color: #11a141;
-    color: #000;
+    color: #fff;
     transition: background-color 0.1s ease-in;
 }
 
